--- a/style/style.scss
+++ b/style/style.scss
@@ -1,20 +1,16 @@
+@import "generales";
+@import "lista";
+
+
 body{
     background-image: url("../img/green-plastic-grass-textured-backdrop.jpg");
    
 }
 
-header{
-    background-color: aquamarine;
-    padding: 20px;
-    margin-left:0px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-right: 0pxpx;
-    border: 10px double black;
-    grid-area: header;
+div{
+    font-size: 30px;}
     
-    justify-content: center;
-    }
+    
     .argentina{
         width: 120px;
         height: 100px;
@@ -74,9 +70,6 @@ header{
             "footer footer footer";
         }
     
-        header{
-            text-align: center;
-        }
     
         .argentina{
             width: 450px;
@@ -135,27 +128,13 @@ header{
         
     
 
-div{
-    font-size: 30px;
-}
 
-ul{
-    list-style: none;
-}
-li{
-    display: inline-table;
-}
-a{
-    text-decoration: none;
-    color: black;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 40px;
-}
 
-*{
-    padding: 0;
-    margin: 0;
-}
+
+
+
+
+
 
 h1{
     text-align: center;
@@ -282,27 +261,3 @@ form{
    
     
 }
-
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- 
-
