--- a/estilos/style.css
+++ b/estilos/style.css
@@ -63,6 +63,19 @@ div {
   width: 160px;
   height: 100px;
 }
+.parte1{
+  width: 120px;
+  height: 100px;
+}
+.parte2{
+  width: 120px;
+  height: 100px;
+}
+.parte3{
+  width: 120px;
+  height: 100px;
+}
+
 
 @media (min-width: 500px) {
   body {
@@ -91,6 +104,19 @@ div {
     width: 200px;
     height: 120px;
   }
+  .parte1{
+    width: 250px;
+    height: 200px;
+  }
+  .parte2{
+    width: 250px;
+    height: 200px;
+  }
+  .parte3{
+    width: 250px;
+    height: 200px;
+  }
+
 }
 
 @media (min-width: 768px) {
@@ -115,11 +141,23 @@ div {
     width: 560px;
     height: 390px;
   }
+  .parte1{
+    width: 450px;
+    height: 350px;
+  }
+  .parte2{
+    width: 450px;
+    height: 350px;
+  }
+  .parte3{
+    width: 450px;
+    height: 350px;
+  }
 }
 
 @media (min-width: 1024px) {
   body {
-    color: blueviolet;
+    color: black;
     margin: 0px;
     -ms-grid-columns: 1fr 4fr 1fr;
         grid-template-columns: 1fr 4fr 1fr;
@@ -143,12 +181,24 @@ div {
     width: 620px;
     height: 420px;
   }
+  .parte1{
+    width: 600px;
+    height: 500px;
+  }
+  .parte2{
+    width: 600px;
+    height: 500px;
+  }
+  .parte3{
+    width: 600px;
+    height: 500px;
+  }
 }
 
 h1 {
   text-align: center;
   grid-area: h1;
-  background-color: #97ff93;
+  background-color: rgb(2, 97, 2);
   color: red;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -177,6 +227,8 @@ main {
   display: flex;
 }
 
+
+
 .parte1 {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -196,6 +248,27 @@ main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+.parte3{
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
@@ -216,7 +289,7 @@ input {
 }
 
 h2 {
-  background-color: orangered;
+  background-color: gray;
   text-align: center;
   grid-area: h2;
 }
@@ -246,6 +319,7 @@ footer {
 
 form {
   background-color: lightgray;
+  color: darkgreen;
 }
 
 .parte1 :hover {
@@ -256,8 +330,15 @@ form {
   background-color: blue;
 }
 
+.parte3 :hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: all 1s;
+  transition: all 1s;
+  background-color: blue;
+}
 .genero {
-  color: red;
+  color: darkgreen;
 }
 
 .face {
@@ -274,10 +355,21 @@ form {
   margin-left: 900px;
 }
 
-.redesSociales :hover {
-  -webkit-transform: scale(2);
-          transform: scale(2);
-  -webkit-transition: all 1s;
-  transition: all 1s;
+.red-social{
+  background-color: gray;
+  color: blue;
+  text-align: center;
 }
+
+.fa-instagram{
+  color: aqua;
+  }
+  
+  .fa-facebook{
+    color: aqua;
+  }
+  
+  .fa-twitter{
+    color: aqua;
+  }
 /*# sourceMappingURL=style.css.map */
