--- a/estilos/style.css
+++ b/estilos/style.css
@@ -63,31 +63,73 @@ div {
   width: 160px;
   height: 100px;
 }
-.parte1{
+
+.boca {
   width: 120px;
   height: 100px;
-}
-.parte2{
-  width: 120px;
-  height: 100px;
-}
-.parte3{
-  width: 120px;
-  height: 100px;
+  text-align: center;
 }
 
+.river {
+  width: 120px;
+  height: 100px;
+  text-align: center;
+}
+
+.san {
+  width: 120px;
+  height: 100px;
+  text-align: center;
+}
+
+.independiente {
+  width: 120px;
+  height: 100px;
+  text-align: center;
+}
+
+.racing {
+  width: 120px;
+  height: 100px;
+  text-align: center;
+}
+
+.arsenal {
+  width: 120px;
+  height: 100px;
+  text-align: center;
+}
+
+.liverpool {
+  width: 120px;
+  height: 100px;
+  text-align: center;
+}
+
+.west {
+  width: 120px;
+  height: 100px;
+  text-align: center;
+}
+
+.chelsea {
+  width: 120px;
+  height: 100px;
+  text-align: center;
+}
+
+.burnley {
+  width: 120px;
+  height: 100px;
+  text-align: center;
+}
 
 @media (min-width: 500px) {
   body {
     margin: 0;
     -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-    grid-area: "h1 h1"
- "header header"
- "h2 h2"
- "figure figure"
- "figcaption figcaption"
- "footer footer";
+    grid-template-columns: 1fr 1fr;
+    grid-template: "h1 h1" 100px "header header" 50px "h2 h2" auto "figure figure" 100px "figcaption figcaption" 100px "footer footer" 100px;
   }
   header {
     text-align: center;
@@ -104,30 +146,57 @@ div {
     width: 200px;
     height: 120px;
   }
-  .parte1{
-    width: 250px;
-    height: 200px;
+  .boca {
+    width: 200px;
+    height: 100px;
   }
-  .parte2{
-    width: 250px;
-    height: 200px;
+  .river {
+    width: 200px;
+    height: 100px;
   }
-  .parte3{
-    width: 250px;
-    height: 200px;
+  .san {
+    width: 200px;
+    height: 100px;
   }
-
+  .racing {
+    width: 200px;
+    height: 100px;
+  }
+  .independiente {
+    width: 200px;
+    height: 100px;
+  }
+  .liverpool {
+    width: 200px;
+    height: 100px;
+  }
+  .arsenal {
+    width: 200px;
+    height: 100px;
+  }
+  .chelsea {
+    width: 200px;
+    height: 100px;
+  }
+  .burnley {
+    width: 200px;
+    height: 100px;
+  }
+  .west {
+    width: 200px;
+    height: 100px;
+  }
 }
 
 @media (min-width: 768px) {
   body {
     margin: 0;
     -ms-grid-columns: 1fr 4fr 1fr;
-        grid-template-columns: 1fr 4fr 1fr;
-    grid-area: "header header header"
- "h1 figure h2"
- "figcaption figcaption figcaption"
- "footer footer footer";
+    grid-template-columns: 1fr 4fr 1fr;
+    grid-template: "header header header" 100px "h1 figure h2" auto "figcaption figcaption figcaption" 100px "footer footer footer" 200px;
+  }
+  header {
+    text-align: center;
   }
   .argentina {
     width: 450px;
@@ -141,17 +210,45 @@ div {
     width: 560px;
     height: 390px;
   }
-  .parte1{
-    width: 450px;
-    height: 350px;
+  .boca {
+    width: 350px;
+    height: 280px;
   }
-  .parte2{
-    width: 450px;
-    height: 350px;
+  .river {
+    width: 350px;
+    height: 280px;
   }
-  .parte3{
-    width: 450px;
-    height: 350px;
+  .san {
+    width: 350px;
+    height: 280px;
+  }
+  .racing {
+    width: 350px;
+    height: 280px;
+  }
+  .independiente {
+    width: 350px;
+    height: 280px;
+  }
+  .liverpool {
+    width: 350px;
+    height: 280px;
+  }
+  .arsenal {
+    width: 350px;
+    height: 280px;
+  }
+  .chelsea {
+    width: 350px;
+    height: 280px;
+  }
+  .burnley {
+    width: 350px;
+    height: 280px;
+  }
+  .west {
+    width: 350px;
+    height: 280px;
   }
 }
 
@@ -160,11 +257,8 @@ div {
     color: black;
     margin: 0px;
     -ms-grid-columns: 1fr 4fr 1fr;
-        grid-template-columns: 1fr 4fr 1fr;
-    grid-area: "h1 h1 h1"
- "header header header"
- "figcaption figure h2"
- "footer footer footer";
+    grid-template-columns: 1fr 4fr 1fr;
+    grid-template: "h1 h1 h1" 120px "header header header" auto "figcaption figure h2" 120px "footer footer footer" 220px;
   }
   header {
     text-align: center;
@@ -181,195 +275,149 @@ div {
     width: 620px;
     height: 420px;
   }
-  .parte1{
-    width: 600px;
-    height: 500px;
+  .boca {
+    width: 400px;
+    height: 350px;
   }
-  .parte2{
-    width: 600px;
-    height: 500px;
+  .river {
+    width: 400px;
+    height: 350px;
   }
-  .parte3{
-    width: 600px;
-    height: 500px;
+  .san {
+    width: 400px;
+    height: 350px;
   }
-}
-
-h1 {
-  text-align: center;
-  grid-area: h1;
-  background-color: rgb(2, 97, 2);
-  color: red;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-main {
-  background-color: lightgray;
-  margin: 6%;
-  border: inset black;
-}
-
-.border {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.imagen {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.video {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-
-
-.parte1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-}
-
-.parte2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-}
-
-.parte3{
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-}
-
-.paginas {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-label {
-  font-size: 30px;
-}
-
-input {
-  font-size: 30px;
-}
-
-h2 {
-  background-color: gray;
-  text-align: center;
-  grid-area: h2;
-}
-
-img {
-  padding: 25px;
-}
-
-iframe {
-  padding: 25px;
-}
-
-figure {
-  border: solid black;
-  grid-area: figure;
-}
-
-figcaption {
-  grid-area: figcaption;
-}
-
-footer {
-  background-color: lightcoral;
-  color: aqua;
-  text-align: center;
-}
-
-form {
-  background-color: lightgray;
-  color: darkgreen;
-}
-
-.parte1 :hover {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-  -webkit-transition: all 1s;
-  transition: all 1s;
-  background-color: blue;
-}
-
-.parte3 :hover {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-  -webkit-transition: all 1s;
-  transition: all 1s;
-  background-color: blue;
-}
-.genero {
-  color: darkgreen;
-}
-
-.face {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: 900px;
-}
-
-.ing {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: 900px;
-}
-
-.red-social{
-  background-color: gray;
-  color: blue;
-  text-align: center;
-}
-
-.fa-instagram{
-  color: aqua;
+  .racing {
+    width: 400px;
+    height: 350px;
   }
-  
-  .fa-facebook{
+  .independiente {
+    width: 400px;
+    height: 350px;
+  }
+  .liverpool {
+    width: 400px;
+    height: 350px;
+  }
+  .burnley {
+    width: 400px;
+    height: 350px;
+  }
+  .chelsea {
+    width: 400px;
+    height: 350px;
+  }
+  .west {
+    width: 400px;
+    height: 350px;
+  }
+  .arsenal {
+    width: 400px;
+    height: 350px;
+  }
+  h1 {
+    text-align: center;
+    grid-area: h1;
+    background-color: #026102;
+    color: red;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  main {
+    background-color: lightgray;
+    margin: 6%;
+    border: inset black;
+  }
+  .border {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .imagen {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .video {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .camisetas {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .cami {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .paginas {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  label {
+    font-size: 30px;
+  }
+  input {
+    font-size: 30px;
+  }
+  h2 {
+    background-color: gray;
+    text-align: center;
+    grid-area: h2;
+  }
+  img {
+    padding: 25px;
+  }
+  iframe {
+    padding: 25px;
+  }
+  figure {
+    border: solid black;
+    grid-area: figure;
+  }
+  figcaption {
+    grid-area: figcaption;
+  }
+  footer {
+    background-color: lightcoral;
+    color: aqua;
+    text-align: center;
+  }
+  form {
+    background-color: lightgray;
+    color: darkgreen;
+  }
+  .genero {
+    color: darkgreen;
+  }
+  .face {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: 900px;
+  }
+  .ing {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: 900px;
+  }
+  .red-social {
+    background-color: gray;
+    color: blue;
+    text-align: center;
+  }
+  .fa-instagram {
     color: aqua;
   }
-  
-  .fa-twitter{
+  .fa-facebook {
     color: aqua;
   }
+  .fa-twitter {
+    color: aqua;
+  }
+}
 /*# sourceMappingURL=style.css.map */
