--- a/style/style.scss
+++ b/style/style.scss
@@ -22,109 +22,294 @@ div{
     .video{
         width: 160px;  
     height: 100px;  }
+    
+    .boca {
+      width: 120px;
+        height: 100px;
+        text-align: center;
+        
+         
+       
+    }
+    .river{
+      width: 120px;
+        height: 100px;
+        text-align: center;
+        
+        
+    }
+    .san {
+      width: 120px;
+        height: 100px;
+        text-align: center;
+        
+    }
 
-    @media(min-width:500px){
-        body{
-            margin: 0;
+     .independiente {
+      width: 120px;
+        height: 100px;
+        text-align: center;
+        
+     }
+     .racing {
+      width: 120px;
+        height: 100px;
+        text-align: center;
+        
+     }
+     .arsenal{
+      width: 120px;
+        height: 100px;
+        text-align: center;
+     }
+     .liverpool{
+      width: 120px;
+        height: 100px;
+        text-align: center;
+     }
+     .west{
+      width: 120px;
+        height: 100px;
+        text-align: center;
+     }
+     .chelsea{
+      width: 120px;
+        height: 100px;
+        text-align: center;
+     }
+     .burnley{
+      width: 120px;
+        height: 100px;
+        text-align: center;
+     }
+     
+
+    @media (min-width: 500px) {
+      body {
+        margin: 0;
+        -ms-grid-columns: 1fr 1fr;
             grid-template-columns: 1fr 1fr;
-            grid-area: 
-            "h1 h1"
-            "header header"
-            "h2 h2"
-            "figure figure"
-            "figcaption figcaption"
-            "footer footer";}
-            
-        
-        header{
-            text-align: center;
-        }
-
-        .argentina{
-            width: 250px;
-            height: 200px;
-        }
-
-        .logo{
-            width: 180px;
-            height: 100px;
-        }
-
-        .video{
-            width: 200px;
-            height: 120px;
-        }
-    }
-    
+        grid-template:
+        "h1 h1" 100px
+     "header header" 50px
+     "h2 h2" auto
+     "figure figure" 100px
+     "figcaption figcaption" 100px
+     "footer footer" 100px;
+      }
+      header {
+        text-align: center;
+      }
+      .argentina {
+        width: 250px;
+        height: 200px;
+      }
+      .logo {
+        width: 180px;
+        height: 100px;
+      }
+      .video {
+        width: 200px;
+        height: 120px;
+      }
+      .boca{
+        width: 200px;
+        height: 100px;
        
-    
-
-    @media(min-width:768px){
-        body{
-            margin: 0;
-            grid-template-columns: 1fr 4fr 1fr;
-            grid-area: 
-            "header header header"
-            "h1 figure h2"
-            "figcaption figcaption figcaption"
-            "footer footer footer";
-        }
-    
-    
-        .argentina{
-            width: 450px;
-            height: 350px;
-        }
-
-        .logo{
-            width: 280px;
-            height: 200px;
-        }
-
-        .video{
-            width: 560px;
-            height: 390px;
-        }
-    }
+      }
+      .river{
+        width: 200px;
+        height: 100px;
+       
+      }
+      .san{
+        width: 200px;
+        height: 100px;
+      }
+        .racing{
+          width: 200px;
+        height: 100px;
         
-    
-
-    @media(min-width:1024px){
-        body{
-            color: blueviolet;
-            margin: 0px;
-            grid-template-columns: 1fr 4fr 1fr;
-            grid-area: 
-            "h1 h1 h1"
-            "header header header"
-            "figcaption figure h2"
-            "footer footer footer";
         }
 
-       header{
-           text-align: center;
-           
-       }
+        .independiente{
+          width: 200px;
+          height: 100px;
+        }
+        .liverpool{
+          width: 200px;
+          height: 100px;
+        }
+        .arsenal{
+          width: 200px;
+          height: 100px;
+        }
+        .chelsea{
+          width: 200px;
+          height: 100px;
+        }
+        .burnley{
+          width: 200px;
+          height: 100px;
+        }
+        .west{
+          width: 200px;
+          height: 100px;
+        }
+        
 
-       .argentina{
-           width: 600px;
-           height: 500px;
-       }
 
-       .logo{
-           width: 350px;
-           height: 300px;
-       }
-
-       .video{
-           width: 620px;
-           height: 420px;
-       }
+}
+    
+    @media (min-width: 768px) {
+      body {
+        margin: 0;
+        -ms-grid-columns: 1fr 4fr 1fr;
+            grid-template-columns: 1fr 4fr 1fr;
+        grid-template: 
+        "header header header" 100px
+     "h1 figure h2" auto
+     "figcaption figcaption figcaption" 100px
+     "footer footer footer" 200px; 
+      }
+      header{
+        text-align: center;
+      }
+      .argentina {
+        width: 450px;
+        height: 350px;
+      }
+      .logo {
+        width: 280px;
+        height: 200px;
+      }
+      .video {
+        width: 560px;
+        height: 390px;
+      }
+      .boca{
+        width: 350px;
+        height: 280px;
+        
+      }
+      .river{
+        width: 350px;
+        height: 280px;
+        
+      }
+      .san{
+        width: 350px;
+        height: 280px;
         
        
-            
-        
+      }
+
+      .racing{
+        width: 350px;
+        height: 280px;
+      }
+
+      .independiente{
+        width: 350px;
+        height: 280px;
+      }
+      .liverpool{
+        width: 350px;
+        height: 280px;
+      }
+      .arsenal{
+        width: 350px;
+        height: 280px;
+      }
+      .chelsea{
+        width: 350px;
+        height: 280px;
+      }
+      .burnley{
+        width: 350px;
+        height: 280px;
+      }
+      .west{
+        width: 350px;
+        height: 280px;
+      }
+     
+      
+      
+     
     }
+    
+    @media (min-width: 1024px) {
+      body {
+        color: black;
+        margin: 0px;
+        -ms-grid-columns: 1fr 4fr 1fr;
+            grid-template-columns: 1fr 4fr 1fr;
+        grid-template: "h1 h1 h1" 120px
+     "header header header" auto
+     "figcaption figure h2" 120px
+     "footer footer footer" 220px; 
+      }
+      header {
+        text-align: center;
+      }
+      .argentina {
+        width: 600px;
+        height: 500px;
+      }
+      .logo {
+        width: 350px;
+        height: 300px;
+      }
+      .video {
+        width: 620px;
+        height: 420px;
+      }
+      .boca{
+        width: 400px;
+        height: 350px;
+        
+      }
+      .river{
+        width: 400px;
+        height: 350px;
+        
+      }
+      .san{
+        width: 400px;
+        height: 350px;
+        
+      }
+      .racing{
+        width: 400px;
+        height: 350px;
+      }
+      .independiente{
+        width: 400px;
+        height: 350px;
+      }
+      .liverpool{
+        width: 400px;
+        height: 350px;
+      }
+      .burnley{
+        width: 400px;
+        height: 350px;
+      }
+      .chelsea{
+        width: 400px;
+        height: 350px;
+      }
+      .west{
+        width: 400px;
+        height: 350px;
+      }
+      .arsenal{
+        width: 400px;
+        height: 350px;
+}
+
+
         
     
 
@@ -136,128 +321,140 @@ div{
 
 
 
-h1{
-    text-align: center;
-    grid-area: h1;
-    background-color: rgb(151, 255, 147);
-    color: red;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    h1 {
+      text-align: center;
+      grid-area: h1;
+      background-color: rgb(2, 97, 2);
+      color: red;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
     
-    } 
-
-main{
-    background-color: lightgray;
-    margin: 6%;
-    border: inset black;
+    main {
+      background-color: lightgray;
+      margin: 6%;
+      border: inset black;
+    }
     
-}
-
-.border{
-    display: flex;
-}
-
-.imagen{
-    display: flex;
-}
-
-.video{
-    display: flex;
-}
-
-.parte1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    flex-wrap: nowrap;
-}
-
-.parte2{
-    display: flex;
-    width: 100%;
-    flex-wrap: nowrap;
+    .border {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+    }
     
-}
-
-.paginas{
-    display: flex;
-}
-
-
-label{
-    font-size: 30px;
-}
-input{
-    font-size: 30px;
-}
-
-h2{
-    background-color: orangered;
-    text-align: center;
-    grid-area: h2;
+    .imagen {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+    }
     
-}
-
-img{
-    padding: 25px;
+    .video {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+    }
 
    
-}
-
-
-iframe{
-    padding: 25px;
-}
-
-figure{
-    border: solid black;
-    grid-area: figure;
-}
-
-figcaption{
-    grid-area: figcaption;
-}
-
-footer{
-    background-color: lightcoral;
-    color: aqua;
-    text-align: center;
+    .camisetas{
+     
+      
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+    }
     
-}
-
-form{
-    background-color: lightgray;
-}
-
-.parte1 :hover{
-    transform: scale(1.2);
-    transition: all 1s;
-    background-color: blue;
+    .cami{
+     
     
-   
-}
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+    }
 
-.genero{
-    color: red;
-}
-
-.face{
-    display: flex;
-    margin-left: 900px;
-    
-}
-
-.ing{
-    display: flex;
-    margin-left: 900px;
     
     
-}
+    .paginas {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+    }
 
-.redesSociales :hover{
-     transform: scale(2);
-    transition: all 1s;
     
-   
+    label {
+      font-size: 30px;
+    }
     
-}
+    input {
+      font-size: 30px;
+    }
+    
+    h2 {
+      background-color: gray;
+      text-align: center;
+      grid-area: h2;
+    }
+    
+    img {
+      padding: 25px;
+    }
+    
+    iframe {
+      padding: 25px;
+    }
+    
+    figure {
+      border: solid black;
+      grid-area: figure;
+    }
+    
+    figcaption {
+      grid-area: figcaption;
+    }
+    
+    footer {
+      background-color: lightcoral;
+      color: aqua;
+      text-align: center;
+    }
+    
+    form {
+      background-color: lightgray;
+      color: darkgreen;
+    }
+    
+    
+    .genero {
+      color: darkgreen;
+    }
+    
+    .face {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      margin-left: 900px;
+    }
+    
+    .ing {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      margin-left: 900px;
+    }
+    
+    .red-social{
+      background-color: gray;
+      color: blue;
+      text-align: center;
+    }
+    
+    .fa-instagram{
+      color: aqua;
+      }
+      
+      .fa-facebook{
+        color: aqua;
+      }
+      
+      .fa-twitter{
+        color: aqua;
+      }
+    }
