Actualizacion del proyecto

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -355,6 +355,86 @@ main {
   display: flex;
 }
 
+.boca:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: all 1s;
+  transition: all 1s;
+  background-color: blue;
+}
+
+.river:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: all 1s;
+  transition: all 1s;
+  background-color: white;
+}
+
+.san:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: all 1s;
+  transition: all 1s;
+  background-color: #a30000;
+}
+
+.independiente:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: all 1s;
+  transition: all 1s;
+  background-color: red;
+}
+
+.racing:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: all 1s;
+  transition: all 1s;
+  background-color: #00b8f6;
+}
+
+.arsenal:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: all 1s;
+  transition: all 1s;
+  background-color: white;
+}
+
+.chelsea:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: all 1s;
+  transition: all 1s;
+  background-color: blue;
+}
+
+.liverpool:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: all 1s;
+  transition: all 1s;
+  background-color: #ffdede;
+}
+
+.west:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: all 1s;
+  transition: all 1s;
+  background-color: #5fd7ff;
+}
+
+.burnley:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: all 1s;
+  transition: all 1s;
+  background-color: brown;
+}
+
 .camisetas {
   display: -webkit-box;
   display: -ms-flexbox;
