--- a/style/style.scss
+++ b/style/style.scss
@@ -358,6 +358,61 @@ div{
       display: flex;
     }
 
+    .boca:hover {
+      
+    transform: scale(1.2);
+     
+      transition: all 1s;
+      background-color: blue;
+    }
+    .river:hover{
+      transform: scale(1.2);
+     transition: all 1s;
+      background-color: white;
+    }
+    .san:hover{
+      transform: scale(1.2);
+     transition: all 1s;
+      background-color: rgb(163, 0, 0);
+    }
+    .independiente:hover{
+      transform: scale(1.2);
+      transition: all 1s;
+       background-color: red;
+    }
+    .racing:hover{
+      transform: scale(1.2);
+     transition: all 1s;
+      background-color: rgb(0, 184, 246);
+    }
+
+    .arsenal:hover{
+      transform: scale(1.2);
+     transition: all 1s;
+      background-color: white;
+    }
+    .chelsea:hover{
+      transform: scale(1.2);
+     transition: all 1s;
+      background-color: blue;
+    }
+    .liverpool:hover{
+      transform: scale(1.2);
+     transition: all 1s;
+      background-color: rgb(255, 222, 222);
+    }
+    .west:hover{
+      transform: scale(1.2);
+     transition: all 1s;
+     background-color: rgb(95, 215, 255);
+      
+    }
+    .burnley:hover{
+      transform: scale(1.2);
+     transition: all 1s;
+     background-color: brown;
+    }
+
    
     .camisetas{
      
