--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,7 +4,7 @@
 }
 
 header {
-  background-color: aquamarine;
+  background-color: white;
   padding: 20px;
   margin-left: 0px;
   margin-top: 0px;
@@ -75,7 +75,7 @@ div {
 }
 
 a {
-  color: black;
+  color: white;
   -webkit-text-decoration: double;
           text-decoration: double;
 }
@@ -189,6 +189,7 @@ h2 {
   background-color: gray;
   text-align: center;
   grid-area: h2;
+  color: white;
 }
 
 @media (min-width: 500px) {
@@ -447,7 +448,7 @@ h2 {
 h1 {
   text-align: center;
   grid-area: h1;
-  background-color: #026102;
+  background-color: black;
   color: red;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -602,12 +603,14 @@ main {
 }
 
 .camisetas {
+  display: inline-table;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
 .cami {
+  display: inline-table;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -628,7 +631,7 @@ input {
 }
 
 h2 {
-  background-color: gray;
+  background-color: #002500;
   text-align: center;
   grid-area: h2;
 }
@@ -644,6 +647,7 @@ iframe {
 figure {
   border: solid black;
   grid-area: figure;
+  display: inline-table;
 }
 
 figcaption {
@@ -672,7 +676,7 @@ form {
 }
 
 .promo {
-  background-color: green;
+  background-color: black;
   text-decoration: none;
   color: black;
   font-family: 'Times New Roman', Times, serif;
@@ -680,23 +684,24 @@ form {
 }
 
 .gloria {
-  background-color: green;
+  background-color: black;
   text-decoration: none;
-  color: black;
+  color: white;
   font-family: 'Times New Roman', Times, serif;
   font-size: 35px;
 }
 
 .pro {
-  background-color: green;
+  background-color: black;
   text-decoration: none;
-  color: black;
+  color: white;
   font-family: 'Times New Roman', Times, serif;
   font-size: 50px;
 }
 
 .ini {
-  background-color: green;
+  background-color: black;
+  color: white;
 }
 
 .ing {
