--- a/style/_generales.scss
+++ b/style/_generales.scss
@@ -4,7 +4,7 @@
 }
 
 header{
-    background-color: aquamarine;
+    background-color: white;
     padding: 20px;
     margin-left:0px;
     margin-top: 0px;
