--- a/style/style.scss
+++ b/style/style.scss
@@ -11,7 +11,7 @@ div{
     font-size: 30px;}
     
     a{
-      color: black;
+      color: white;
       text-decoration: double;
       
     }
@@ -118,6 +118,7 @@ div{
       background-color: gray;
       text-align: center;
       grid-area: h2;
+      color: white;
     }
 
    
@@ -424,7 +425,7 @@ div{
     h1 {
       text-align: center;
       grid-area: h1;
-      background-color: rgb(2, 97, 2);
+      background-color: black;
       color: red;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
@@ -542,7 +543,7 @@ div{
    
     .camisetas{
      
-      
+      display: inline-table;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -550,7 +551,7 @@ div{
     
     .cami{
      
-    
+      display: inline-table;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -562,6 +563,7 @@ div{
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
+      
     }
 
     
@@ -574,7 +576,7 @@ div{
     }
     
     h2 {
-      background-color: gray;
+      background-color: rgb(0, 37, 0);
       text-align: center;
       grid-area: h2;
     }
@@ -590,6 +592,7 @@ div{
     figure {
       border: solid black;
       grid-area: figure;
+      display: inline-table;
     }
     
     figcaption {
@@ -621,31 +624,32 @@ div{
     }
     
     .promo{
-      background-color: green;
+      background-color: black;
       text-decoration: none;
                     color: black;
                     font-family: 'Times New Roman', Times, serif;
                     font-size: 35px;
     }
     .gloria{
-      background-color: green;
+      background-color: black;
       text-decoration: none;
-                    color: black;
+                    color: white;
                     font-family: 'Times New Roman', Times, serif;
                     font-size: 35px;
     }
 
     .pro{
-      background-color: green;
+      background-color: black;
       text-decoration: none;
-                    color: black;
+                    color: white;
                     font-family: 'Times New Roman', Times, serif;
                     font-size: 50px;
                     
     }
 
     .ini{
-      background-color: green;
+      background-color: black;
+      color: white;
     }
     .ing {
       display: -webkit-box;
