Actualizacion del proyecto

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -699,6 +699,14 @@ form {
   font-size: 50px;
 }
 
+.contac {
+  background-color: black;
+  text-decoration: none;
+  color: white;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 35px;
+}
+
 .ini {
   background-color: black;
   color: white;
