--- a/style/style.scss
+++ b/style/style.scss
@@ -647,6 +647,14 @@ div{
                     
     }
 
+    .contac{
+      background-color: black;
+      text-decoration: none;
+                    color: white;
+                    font-family: 'Times New Roman', Times, serif;
+                    font-size: 35px;
+    }
+
     .ini{
       background-color: black;
       color: white;
@@ -662,6 +670,7 @@ div{
       background-color: gray;
       color: blue;
       text-align: center;
+      
     }
     
     .fa-instagram{
